# ChangeLog for net-p2p/bittorrent
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/ChangeLog,v 1.120 2007/11/21 15:23:51 armin76 Exp $

  21 Nov 2007; Raúl Porcel <armin76@gentoo.org> bittorrent-5.0.9.ebuild:
  alpha/ia64/sparc stable

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> bittorrent-5.0.9.ebuild:
  Stable on x86

*bittorrent-5.0.9 (16 Oct 2007)

  16 Oct 2007; Raúl Porcel <armin76@gentoo.org> +bittorrent-5.0.9.ebuild:
  Version bump wrt #196022

  29 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> bittorrent-5.0.7.ebuild:
  Lock wxGTK to 2.6.

  24 Jun 2007; Raúl Porcel <armin76@gentoo.org> -bittorrent-5.0.5.ebuild:
  old

  21 Jun 2007; Raúl Porcel <armin76@gentoo.org> -bittorrent-5.0.6.ebuild:
  old

  09 Jun 2007; Joe Peterson <lavajoe@gentoo.org> bittorrent-5.0.7.ebuild:
  Add ~x86-fbsd keyword

  15 May 2007; Raúl Porcel <armin76@gentoo.org> bittorrent-5.0.7.ebuild:
  alpha stable wrt bug 167783

  08 Apr 2007; Markus Rothe <corsair@gentoo.org> bittorrent-5.0.7.ebuild:
  Stable on ppc64; bug #167783

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  bittorrent-5.0.7.ebuild:
  stable amd64, bug 167783

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  bittorrent-5.0.7.ebuild:
  ppc stable, bug #167783

  05 Apr 2007; Jeroen Roovers <jer@gentoo.org> bittorrent-5.0.7.ebuild:
  Stable for HPPA (bug #167783).

  04 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  bittorrent-5.0.7.ebuild:
  Stable on sparc wrt #167783

  04 Apr 2007; Raúl Porcel <armin76@gentoo.org> bittorrent-5.0.7.ebuild:
  x86 stable + ~ia64, wrt bug 167783

  12 Mar 2007; Jose Luis Rivero <yoswink@gentoo.org>
  bittorrent-5.0.5.ebuild:
  Stable on alpha wrt bug #167783

*bittorrent-5.0.7 (03 Mar 2007)

  03 Mar 2007; Raúl Porcel <armin76@gentoo.org> +bittorrent-5.0.7.ebuild:
  Version bump

  24 Feb 2007; nixnut <nixnut@gentoo.org> bittorrent-5.0.5.ebuild:
  Stable on ppc wrt bug 167783
