@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/bittorrent-5.0.9.ebuild,v 1.3 2007/11/21 15:23:51 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/bittorrent-5.0.9.ebuild,v 1.4 2007/11/21 15:38:59 drac Exp $
 
 inherit distutils fdo-mime eutils
 
@@ -14,13 +14,11 @@ SRC_URI="http://download.bittorrent.com/dl/${MY_P}.tar.gz"
 
 LICENSE="BitTorrent"
 SLOT="0"
-KEYWORDS="alpha ~amd64 ~arm ~hppa ia64 ~ppc ~ppc64 ~s390 ~sh sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ~arm ~hppa ia64 ~ppc ~ppc64 ~s390 ~sh sparc x86 ~x86-fbsd"
 IUSE="gtk"
 
 RDEPEND=">=dev-lang/python-2.3
-	gtk? (
-		=dev-python/wxpython-2.6*
-	)
+	gtk? ( =dev-python/wxpython-2.6* )
 	>=dev-python/pycrypto-2.0
 	>=dev-python/twisted-2
 	dev-python/twisted-web
