@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/bittorrent
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/ChangeLog,v 1.120 2007/11/21 15:23:51 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittorrent/ChangeLog,v 1.121 2007/11/21 15:38:59 drac Exp $
+
+  21 Nov 2007; Samuli Suominen <drac@gentoo.org> bittorrent-5.0.9.ebuild:
+  amd64 stable wrt #199882
 
   21 Nov 2007; Raúl Porcel <armin76@gentoo.org> bittorrent-5.0.9.ebuild:
   alpha/ia64/sparc stable
